--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,9 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 main {
 max-width: 840px; 
 }   
@@ -10,12 +16,15 @@ padding: 1rem;
 background-color: #eee;
 color: #333;
 text-align: center;
+position: relative;
+
 }
 
 main img {
     width: 200px;
     height: auto;
     box-shadow: 0 0 30px gray;
+    float: right;
 
 }
 
@@ -27,4 +36,24 @@ footer {
     margin-top: 15px;
     border-top: 1px solid #000;
     text-align: center;
+}
+
+/* Class Selectors */
+.box {
+  margin: 1rem;
+  border: 1px solid rgba(0,0,0,.1);
+  padding: 1rem;
+  background-color: #ddd;
+  color: #000;
+}
+aside {
+    width: 20em;
+    text-align: center;
+}
+
+aside h2 {
+    position: absolute;
+    top: 330px;
+    left: 150px;
+
 }
