--- a/styles/styles.css
+++ b/styles/styles.css
@@ -53,7 +53,56 @@ aside {
 
 aside h2 {
     position: absolute;
-    top: 330px;
+    top: 13px;
     left: 150px;
 
 }
+
+header,footer {
+    max-width: 840px;
+    margin: 0 auto;
+}
+    
+
+nav {
+    background-color: steelblue;
+    padding: 1rem;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+nav a{
+    display: block;
+    padding: 0.5rem;
+    text-decoration: none;
+    font-size: 1.2rem;
+    font-weight: 700;
+    color: #fff;
+}
+
+h1 {
+    border-bottom: 1px solid steelblue;
+}
+header, grid, footer {
+    max-width: 840px;
+    margin: 0 auto;
+
+}
+
+.grid {
+    display: grid;
+    align-items: center;
+  }
+  
+  main {
+    grid-column: 2/3;
+    margin: 1rem;
+  }
+  
+  aside {
+    width: 20rem;
+    position: relative;
+    grid-column: 1/2;
+    grid-row: 1/2;
+  }
