--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -74,9 +74,10 @@ nav.sociallinks a img {
 }
 
 section img {
-    width: 500px;
-    height: 300px;
+    width: 250px;
+    height: 150px;
     object-fit: cover;
+    flex: 1 0 auto;
 }
 
 nav {
@@ -91,15 +92,13 @@ header img {
 
 section {
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px;
     background-color: var(--secondary-color);
 }
 
 section h2 {
+    text-align: center;
+    margin-top: 20px;
     font-size: 2em;
-    margin-bottom: 10px;
 }
 
 section p {
@@ -119,4 +118,8 @@ nav.sociallinks{
     justify-content: flex-end;
     gap: 10px;
 
+}
+
+figure img {
+    margin: 5px;
 }
