--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -74,6 +74,7 @@ nav.sociallinks a img {
 }
 
 section img {
+    justify-content: center;
     width: 250px;
     height: 150px;
     object-fit: cover;
@@ -120,6 +121,44 @@ nav.sociallinks{
 
 }
 
-figure img {
-    margin: 5px;
+.contact-form{
+    justify-content: center;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background-color: white;
+}
+.contact-form input[type="text"],
+.contact-form input[type="email"],
+.contact-form textarea
+{
+    border: 1px solid #6aacea;
+    border-radius: 30px;
+}
+.submit_button {
+    background-color: grey;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 20px;
+}
+
+.submit_button:hover{
+    background-color: green;
+}
+
+.company-info {
+    padding: 10px;
+    margin: 10px;
+    display: flex;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 20px;
+    background-color: #7f81f7;
+}
+
+.company-info .map-container iframe {
+    border: none;
+    align-self: start;
 }
