--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -162,3 +162,9 @@ nav.sociallinks{
     border: none;
     align-self: start;
 }
+h1{
+    text-align: center;
+    position: relative;
+    margin: 20px;
+
+}
